--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
         <div class="mobile-menu-overlay"></div>
 
         <nav role="navigation" class="probootstrap-nav hidden-xs">
-          <ul class="probootstrap-main-nav">
+            
+            <!-- FRONT PAGE MENU
+         <ul class="probootstrap-main-nav">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
-          </ul>
+          </ul> -->
           <ul class="probootstrap-right-nav hidden-xs">
             <li><a href="https://www.facebook.com/Mind-Body-Soul-Ministries-Outreach-Center-Pastor-Nathaniel-Thomas-247427802081156/" target="_blank"><i class="icon-facebook2"></i></a></li>
             <li><a href="#"><i class="icon-envelope"></i></a></li>
