--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
           </ul> -->
           <ul class="probootstrap-right-nav hidden-xs">
             <li><a href="https://www.facebook.com/Mind-Body-Soul-Ministries-Outreach-Center-Pastor-Nathaniel-Thomas-247427802081156/" target="_blank"><i class="icon-facebook2"></i></a></li>
-            <li><a href="#"><i class="icon-envelope"></i></a></li>
           </ul>
           <div class="extra-text visible-xs"> 
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -66,6 +65,15 @@
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
       <li style="background-image: url(img/chuttersnap-299121-unsplash.jpg);">
+          <div class="container">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <div class="slides-text probootstrap-animate">
+                <h2></h2>
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
       <li style="background-image: url(img/serge-kutuzov-245648-unsplash.jpg);">
       </li>
@@ -115,7 +123,7 @@
               <i class="icon-star-full"></i>
             </div>
             <div class="text">
-                <h3 class="heading">Presidental Detail <br> <sup> * complete * </sup></h3>
+                <h3 class="heading" id="pd">Presidental Detail <br> <sup> * complete * </sup></h3>
                 <h4>$150</h4>
               <ul>
                   <li>Claybar Entire Vehicle
@@ -140,7 +148,7 @@
               <i class="icon-star-full"></i>
             </div>
             <div class="text">
-              <h3 class="heading">The Vice President <br><sup> * no engine/no trunk * </sup></h3>
+              <h3 class="heading" id="vp">The Vice President <br><sup> * no engine/no trunk * </sup></h3>
                 <h4>$120</h4>
               <ul>
                   <li>Machine Buff w/ Compound</li>
@@ -161,7 +169,7 @@
               <i class="icon-star-full"></i>
             </div>
             <div class="text">
-              <h3 class="heading">The First Lady <br> <sup> * buff &amp; wax ONLY * </sup></h3>
+              <h3 class="heading" id="fl">The First Lady <br> <sup> * buff &amp; wax ONLY * </sup></h3>
                 <h4>$100</h4>
               <ul>
                   <li>Wash Entire Vehicle</li>
