--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>American Car Care | Home</title>
+    <title>American Car Care | Auto Sales // Detail Services</title>
     <meta name="description" content="Auto Sales | Detail Service">
     <meta name="keywords" content="automotive, auto detailing, car care, car wash, american car care">
     
@@ -41,9 +41,6 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul> -->
-          <ul class="probootstrap-right-nav hidden-xs">
-            <li><a href="https://www.facebook.com/Mind-Body-Soul-Ministries-Outreach-Center-Pastor-Nathaniel-Thomas-247427802081156/" target="_blank"><i class="icon-facebook2"></i></a></li>
-          </ul>
           <div class="extra-text visible-xs"> 
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
             <h5>Address</h5>
@@ -112,7 +109,8 @@
     </ul>
   </section>
   <!-- END: slider  -->
-
+<h1></h1>
+      <p class="intro">Conveniently located just east of Pennsylania Ave. at <a href="https://goo.gl/maps/rte4QHxFVvJxEFZ98" target="_blank">1301 E. Kalamazoo St. Lansing, MI 48912</a>, American Car Care Auto Sales / Detail Service. Come in and Checkout our <b>"Like New"</b> Pre-Owned Vehicles in stock. We carry all makes and models and <b>"If you dont see it ... we can get it".</b> We sale quality preowned cehicles at a reasonable price that will fit any budget! Newer* model cars come with factory warranties all inspected and certified by our mechanics .. we do financing &amp; cash sales. Easy financing available with down payment, and approved credit. With a lineup like that American Car Care Auto Sales offers, it's no wonder that we will be One of Mid Michigan’s #1 in auto sales and detail centers. Looking for a used car in Lansing? American Car Care Auto Sales / Detail Service has a large selection of used cars and certified pre-owned vehicles in the Lansing area we also have a trained team of auto detail technicians, mechanics &amp; service personal, who can restore your current vehicle's showroom shine luster &amp; finish.  <br><b>"Where customer satisfaction is first"</b>. We'll see you there. <b><a href="#contact" target="_top">CALL US NOW <sup>click here</sup></a></b></p><sub>"PLEASE NOTE THAT ALL SALES ARE FINAL"</sub>
   <section class="probootstrap-section" id="services">
     <div class="container">
       <div class="row">
