--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h5>Connect</h5>
             <ul class="social-buttons">
               <li><a href="https://www.facebook.com/Mind-Body-Soul-Ministries-Outreach-Center-Pastor-Nathaniel-Thomas-247427802081156/" target="_blank"><i class="icon-facebook2"></i></a></li>
-              <li><a href="#"><i class="icon-envelope"></i></a></li>
+              <li><a href="mailto:pastornatethomas1@gmail.com" target="_blank"><i class="icon-envelope"></i></a></li>
             </ul>
           </div>
         </nav>
@@ -204,7 +204,7 @@
               </div>
               <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                    <p>Interior Shampoo &amp; Detail - $100<sup>.00 vans/suv</sup> $75<sup>.00 cars</sup></p><p>Dye Interior Carpet - $100<sup>.00</sup></p><p>Wash &amp; Hand Wax <sup> * no machine buff *</sup> - $60<sup>.00</sup></p><p>Engine Steam Clean - $50<sup>.00</sup></p><p>Hand Wash  ( IN/OUT ) - $25<sup>.00</sup></p><p>Hand Wash  ( EXTERIOR ) - $15<sup>.00</sup></p><p>Vacuum - $15<sup>.00 vans</sup> $10<sup>.00 cars</sup></p><p>Tire Shine - $7<sup>.00</sup></p>
+                    <p>Interior Shampoo - $100<sup>.00 vans/suv</sup> $75<sup>.00 cars</sup></p><p>Dye Interior Carpet - $100<sup>.00</sup></p><p>Wash &amp; Hand Wax <sup> * no machine buff *</sup> - $60<sup>.00</sup></p><p>Engine Steam Clean - $50<sup>.00</sup></p><p>Hand Wash  ( IN/OUT ) - $25<sup>.00</sup></p><p>Hand Wash  ( EXTERIOR ) - $15<sup>.00</sup></p><p>Vacuum - $15<sup>.00 vans</sup> $10<sup>.00 cars</sup></p><p>Tire Shine - $7<sup>.00</sup></p>
                 </div>
               </div>
             </div>
