--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h5>Connect</h5>
             <ul class="social-buttons">
               <li><a href="https://www.facebook.com/Mind-Body-Soul-Ministries-Outreach-Center-Pastor-Nathaniel-Thomas-247427802081156/" target="_blank"><i class="icon-facebook2"></i></a></li>
-              <li><a href="mailto:pastornatethomas1@gmail.com" target="_blank"><i class="icon-envelope"></i></a></li>
+              <li><a href="mailto:americancarcare01@gmail.com" target="_blank"><i class="icon-envelope"></i></a></li>
             </ul>
           </div>
         </nav>
@@ -290,7 +290,7 @@
           <div class="probootstrap-footer-widget right">
             <ul class="probootstrap-social">
               <li><a href="https://www.facebook.com/Mind-Body-Soul-Ministries-Outreach-Center-Pastor-Nathaniel-Thomas-247427802081156/" target="_blank"><i class="icon-facebook"></i></a></li>
-              <li><a href="mailto:pastornatethomas1@gmail.com" target="_blank"><i class="icon-envelope"></i></a></li>
+              <li><a href="mailto:americancarcare01@gmail.com" target="_blank"><i class="icon-envelope"></i></a></li>
             </ul>
           </div>
         </div>
