open graph data

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>American Car Care | Auto Sales // Detail Services</title>
     <meta name="description" content="Auto Sales | Detail Service">
     <meta name="keywords" content="automotive, auto detailing, car care, car wash, american car care">
+    <meta property="og:image" content="img/thumbnail.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.facebook.com/AmericanCarCareLansing/" />
+    <meta property="og:title" content="American Car Care ( Auto Sales / Detail Services )" />
+    <meta property="og:description" content="We're a Christian-Family operated business. We have over 45 years of experience in Detailing Service & Pre-Owned Car Sales, that are priced to sell. Our aim is to please & satisfy customers & establish a rapport with the local community as family." />
+    <meta property="og:description" content="X" />
     
     <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
