--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="automotive, auto detailing, car care, car wash, american car care">
     <meta property="og:image" content="https://codingkaveman.github.io/americancarcare/img/thumbnail.png" />
     <meta property="fb:app_id" content="2196244273817161" />
+    <meta name="google-site-verification" content="Rtg1P9zdeMZAI9DyTsbjOzdpIM7l1lAsDWG3p_foiVQ" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.facebook.com/AmericanCarCareLansing/" />
     <meta property="og:title" content="American Car Care ( Auto Sales / Detail Services )" />
