--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </nav>
     </div>
       <h1 id="tag">Auto Sales // Detail Services</h1>
+      <h1><iframe src="https://www.facebook.com/plugins/share_button.php?href=http%3A%2F%2Famericancarcare.us&layout=button&size=large&appId=2196244273817161&width=73&height=28" width="73" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" id="facebook_share"></iframe></h1>
   </header>
   <!-- END: header -->
   <section class="probootstrap-slider flexslider">
@@ -118,7 +119,6 @@
     </ul>
   </section>
   <!-- END: slider  -->
-<h1></h1>
       <p class="intro">Conveniently located just east of Pennsylvania Ave. at <a href="https://goo.gl/maps/rte4QHxFVvJxEFZ98" target="_blank">1301 E. Kalamazoo St. Lansing, MI 48912</a>, American Car Care Auto Sales / Detail Service. Come in and Checkout our <b>"Like New"</b> Pre-Owned Vehicles in stock. We carry all makes and models and <b>"If you don't see it ... we can get it".</b> We sale quality pre-owned vehicles at a reasonable price that will fit any budget! Newer* model cars come with factory warranties all inspected and certified by our mechanics .. we do financing &amp; cash sales. Easy financing available with down payment, and approved credit. With a lineup like that American Car Care Auto Sales offers, it's no wonder that we will be One of Mid Michigan’s #1 in auto sales and detail centers. Looking for a used car in Lansing? American Car Care Auto Sales / Detail Service has a large selection of used cars and certified pre-owned vehicles in the Lansing area we also have a trained team of auto detail technicians, mechanics &amp; service personal, who can restore your current vehicle's showroom shine luster &amp; finish.  <br><b>"Where customer satisfaction is first"</b>. We'll see you there. <b><a href="#contact" target="_top">CALL US NOW <sup>click here</sup></a></b></p><sub>"PLEASE NOTE THAT ALL SALES ARE FINAL"</sub>
   <section class="probootstrap-section" id="services">
     <div class="container">
